field card alignment styling fix

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -12,11 +12,11 @@
 
 
 .fieldTitle {
-    max-width: 50px;
+    max-width: 0px;
     display: inline-block;
     font-size: 18px;
     background-color: inherit;
-    padding-left: 250px;
+    padding-left: 225px;
     padding-top: 15px;
     padding-bottom: 15px;
 }
